objects/LAT_BI_Fact_Invest__c.object
<CustomObject>
    <fields>
        <fullName>LAT_BI_AN8_CUSTOMER__c</fullName>
        <label>AN8 CUSTOMER</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_BI_CD_CONTRACT__c</fullName>
        <label>CD CONTRACT</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_BI_CD_COUNTRY__c</fullName>
        <label>CD COUNTRY</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAT_BI_MONTH_YEAR__c</fullName>
        <label>MONTH YEAR</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_BI_MONTH__c</fullName>
        <label>MONTH</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_BI_VL_INVEST__c</fullName>
        <label>VL INVEST</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAT_BI_YEAR__c</fullName>
        <label>YEAR</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>LAT BI Fact Invest</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Contratos</fullName>
        <columns>NAME</columns>
        <columns>LAT_BI_CD_COUNTRY__c</columns>
        <columns>LAT_BI_AN8_CUSTOMER__c</columns>
        <columns>LAT_BI_CD_CONTRACT__c</columns>
        <columns>LAT_BI_MONTH_YEAR__c</columns>
        <columns>LAT_BI_YEAR__c</columns>
        <columns>LAT_BI_MONTH__c</columns>
        <columns>LAT_BI_VL_INVEST__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Contratos</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Specific_Contract</fullName>
        <columns>NAME</columns>
        <columns>LAT_BI_CD_COUNTRY__c</columns>
        <columns>LAT_BI_AN8_CUSTOMER__c</columns>
        <columns>LAT_BI_CD_CONTRACT__c</columns>
        <columns>LAT_BI_MONTH_YEAR__c</columns>
        <columns>LAT_BI_YEAR__c</columns>
        <columns>LAT_BI_MONTH__c</columns>
        <columns>LAT_BI_VL_INVEST__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAT_BI_CD_CONTRACT__c</field>
            <operation>contains</operation>
            <value>CON-025804</value>
        </filters>
        <label>Specific Contract</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>View_All</fullName>
        <columns>NAME</columns>
        <columns>LAT_BI_AN8_CUSTOMER__c</columns>
        <columns>LAT_BI_CD_CONTRACT__c</columns>
        <columns>LAT_BI_CD_COUNTRY__c</columns>
        <columns>LAT_BI_MONTH__c</columns>
        <columns>LAT_BI_MONTH_YEAR__c</columns>
        <columns>LAT_BI_VL_INVEST__c</columns>
        <columns>LAT_BI_YEAR__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>FI-{000000}</displayFormat>
        <label>LAT BI Fact Invest Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LAT BI Fact Invests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>